# emojifilt.cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
include/emojifilt/: emojifilt.hpp
lib/: CMakeLists.txt  emojifilt.cpp
